project1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  namespace: todo-app
spec:
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
